# museum-api

./: .gitignore  LICENSE  README.md  file.txt  index.md  main.py  museumapi.py  package-lock.json  requirements.txt  setup.cfg  utils.py
docs/: conf.py  index.rst  modules.rst  museumapi.rst  tests.rst
docs/_build/doctrees/: environment.pickle  index.doctree  main.doctree  modules.doctree  museumapi.doctree  tests.doctree  utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  main.html  modules.html  museumapi.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  utils.html
docs/_build/html/_sources/: modules.rst.txt  museumapi.rst.txt  tests.rst.txt  utils.rst.txt
reports/: .~lock.museum_data.csv#  museum_data.csv  museum_data.html  museum_data.xlsx  museum_data.xml
src/museum_api/: museumapi.py  utils.py
src/museum_api_package/: museumapi.py
tests/: test_museumapi.py  test_utils.py  tmp.html
tests/correct_data/: museum_data.html  museum_data.xlsx  museum_data.xml
tests/tmp/: object_ids_resp.json  object_resp.json  objects_list_for_conversion.json
