[metadata]
name = museum-api-package
version = 0.0.3
author = Vinay Arora
author_email = vinayarora404219@protonmail.com
description = Python package for implementing functionalities of museum api through objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VinayArora404219/museum-api-package
project_urls =
    Bug Tracker = https://github.com/VinayArora404219/museum-api-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src