[metadata]
name = museum-api-package

version = 0.0.5


author = Vinay Arora
author_email = vinayarora404219@protonmail.com
description = Python package for implementing functionalities of museum api through objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VinayArora404219/museum-api-package
project_urls =
    Bug Tracker = https://github.com/VinayArora404219/museum-api-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    requests==2.26.0
    pandas==1.3.5
    lxml==4.7.1
    pdfkit==1.0.0
    openpyxl==3.0.9
    numpy==1.21.4
    urllib3==1.26.7




[options.packages.find]
where = src